src/prompts/snapshots/cake__prompts__tests__prompt_with_user_and_project_agents.snap
---
source: src/prompts/mod.rs
expression: prompt
---
system:
You are cake. You are running as a coding agent in a CLI on the user's computer.

---

developer:
## Additional Context

Project and user instructions are shown below. Be sure to adhere to these instructions. IMPORTANT: These instructions OVERRIDE any default behavior and you MUST follow them exactly as written.

### ~/.cake/AGENTS.md

<instructions>
User-level global instructions.
</instructions>

### ./AGENTS.md

<instructions>
Project-level overrides.
</instructions>



---

developer:
Current working directory: /project
Today's date: [DATE]
